# ngsidekick

./: README.md  pyproject.toml
docs/: .buildinfo  annotations.html  deploy-docs.sh  gcs.html  genindex.html  index.html  local.html  ngvideo_helper.html  objects.inv  precomputed.html  py-modindex.html  search.html  searchindex.js  segmentcolors.html  segmentprops.html  state_utils.html
docs/_modules/: index.html
docs/_modules/ngsidekick/: gcs.html  segmentcolors.html  state_utils.html
docs/_modules/ngsidekick/annotations/: local.html
docs/_modules/ngsidekick/annotations/precomputed/: _util.html  precomputed.html
docs/_modules/ngsidekick/segmentprops/: segmentprops.html  select_segment_properties.html
docs/_sources/: index.rst  precomputed.rst
docs/source/: annotations.local.rst  annotations.rst  conf.py  index.rst  precomputed.rst  segmentprops.rst  select_segment_properties.rst  state_utils.rst  storage.rst  tutorial.rst  video_tool_utils.rst
src/ngsidekick/: __init__.py  cors_server.py  gcs.py  ngvideo_helper.py  segmentprops.py  state_utils.py  util.py
src/ngsidekick/annotations/: local.py
src/ngsidekick/annotations/precomputed/: __init__.py  _db.py  _encode.py  _id.py  _memory.py  _relationships.py  _shard_audit.py  _shard_hash.py  _spatial.py  _util.py  _write_buffers.py  compressed_morton.py  precomputed.py
src/ngsidekick/segmentprops/: __init__.py  segmentprops.py  segmentprops_selector.py  select_segment_properties.py
tests/: test_precomputed_annotations.py  test_shard_hash.py  test_spatial.py
tutorials/: tutorial.ipynb
